--- a/src/components/CardPreviewSlider/CardPreviewSlider.css
+++ b/src/components/CardPreviewSlider/CardPreviewSlider.css
@@ -7,4 +7,37 @@
 .image-slider-container .slick-next:before {
     color: black;
 }
-  
+
+.slick-slider {
+    position: relative;
+    height: 100%;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+}
+
+.slick-list {
+    position: relative;
+    display: block !important;
+    overflow: hidden;
+    width: 100%;
+}
+
+.slick-track {
+    position: relative;
+    top: 0;
+    left: 0;
+    display: flex !important;
+}
+
+.slick-slide {
+    height: inherit !important;
+}
+
+.slick-slide div {
+    display: flex !important;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
