--- a/src/components/CardPreview/CardPreview.css
+++ b/src/components/CardPreview/CardPreview.css
@@ -1,12 +1,12 @@
-.card {
+.card-preview {
     width: 17rem;
 }
 
-.card-title {
+.card-preview-title {
     font-size: 14px;
 }
 
-.card-img-top {
+.card-preview-img {
     width: 100%;
     height: 17vh;
     object-fit: cover;
