--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,17 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@font-face {
+  font-family: "MagentaRose";
+  src: local("MagentaRose"),
+   url("./fonts/magenta-rose/MagentaRose.ttf") format("truetype");
+  font-weight: Regular;
+}
+
+@font-face {
+  font-family: "MacondoSwashCaps";
+  src: local("MacondoSwashCaps-Regular"),
+   url("./fonts/macondo-swash-caps/MacondoSwashCaps-Regular.ttf") format("truetype");
+  font-weight: Regular;
+}
