--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -1,6 +1,10 @@
-.login-page-row {
+.login-page-container {
     width: 100%;
-    height: 100vh;
+    height: 90vh;
+}
+
+.login-page-row {
+    height: 100%
 }
 
 .login-page-col {
@@ -8,7 +12,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 30px;
+    margin: 30px;
 }
 
 .login-page-form-div {
