--- a/src/components/CardGrid/CardGrid.css
+++ b/src/components/CardGrid/CardGrid.css
@@ -1,7 +1,3 @@
-.col-style {
-    margin: 5px 0;
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    /* flex-direction: column; */
+.card-grid-col {
+    margin: 5px auto;
 }
