--- a/src/components/RecommendNavBar/RecommendNavBar.css
+++ b/src/components/RecommendNavBar/RecommendNavBar.css
@@ -7,17 +7,23 @@
     height: 35px;
     width: 35px;
     border-radius: 50%;
-    display: flex; /* or inline-flex */
+    display: flex;
     align-items: center; 
     justify-content: center;
 }
 
 .signed-user-options {
-    display: flex; /* or inline-flex */
+    display: flex;
     align-items: center; 
     justify-content: center;
 }
 
 .signup-user-button {
     margin: 0 10px;
+}
+
+.nav-link {
+    display: flex;
+    align-items: center; 
+    justify-content: center;
 }
