--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .font-face-mr {
-    font-family: "MagentaRose";
+  font-family: "MagentaRose";
 }
 
 .font-face-msc {
-    font-family: "MacondoSwashCaps";
+  font-family: "MacondoSwashCaps";
 }
 
 /*
@@ -11,13 +11,13 @@ Container
 */
 
 .recommend-root-container {
-    width: 100%;
-    height: 100vh;
+  width: 100%;
+  height: 100vh;
 }
 
 .recommend-page-container {
-    width: 100%;
-    height: 80vh;
+  width: 100%;
+  height: 80vh;
 }
 
 /* 
@@ -25,14 +25,14 @@ Grid
 */
 
 .recommend-grid-row {
-    height: 100%
+  height: 100%;
 }
 
 .recommend-grid-col {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 /* 
@@ -40,28 +40,28 @@ Form related styling
 */
 
 .recommend-form-box {
-    padding: 30px 20px;
-    border-radius: 5%;
-    min-width: 25rem;
+  padding: 30px 20px;
+  border-radius: 5%;
+  min-width: 25rem;
 }
 
 .recommend-form-header {
-    text-align: center;
-    margin-bottom: 30px;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 .recommend-form-subtext-link {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .recommend-form-field-group {
-    position: relative;
-    margin-bottom: 20px;
+  position: relative;
+  margin-bottom: 20px;
 }
 
 .recommend-form-button {
-    text-align: center;
-    margin: 10px;
+  text-align: center;
+  margin: 10px;
 }
 
 /* Misc */
