--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,10 @@ Form related styling
 .recommend-component-hide {
   display: none;
 }
+
+/* Links */
+
+a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
