--- a/src/components/CardDetail/CardDetail.css
+++ b/src/components/CardDetail/CardDetail.css
@@ -11,7 +11,6 @@
   display: none;
 }
 
-a {
-  color: inherit; /* blue colors for links too */
-  text-decoration: inherit; /* no underline */
+.pointer {
+  cursor: pointer;
 }
